KFileWidget In saving single file mode an enter/return press on the KDirOperator triggers slotOk

Summary:
Draw inspiration from inspiration from https://phabricator.kde.org/D12538 for reference.

The issue at hand:
 * the KDirOperator did not signal when it received an enter/return event when it should.
 * This prevents expected behavior

BUG: 385189
FIXED-IN: 5.57

Test Plan:
1 compile kio and its test kfilewidgettest_saving_gui.cpp
2 launch kfilewidgettest_saving_gui
4 click on an place on the left
5 Hit enter
6 The dialog closes, the filename selected is printed out in the terminal

Reviewers: #frameworks, #dolphin, ngraham, dfaure

Reviewed By: #dolphin, ngraham, dfaure

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D19824