src/filewidgets/kdiroperator.cpp
@@ -164,6 +164,8 @@ void KDirOperator::keyPressEvent(QKeyEvent *e)
 {
     if (!(e->key() == Qt::Key_Return || e->key() == Qt::Key_Enter)) {
         QWidget::keyPressEvent(e);
+    } else {
+        emit keyEnterReturnPressed();
     }
 }
 
