src/filewidgets/kfilewidget.h
@@ -613,6 +613,7 @@ private:
     Q_PRIVATE_SLOT(d, void _k_slotIconSizeSliderMoved(int))
     Q_PRIVATE_SLOT(d, void _k_slotIconSizeChanged(int))
     Q_PRIVATE_SLOT(d, void _k_slotViewDoubleClicked(const QModelIndex&))
+    Q_PRIVATE_SLOT(d, void _k_slotViewKeyEnterReturnPressed())
 };
 
 #endif
